force-app/main/default/objects/User/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF(IsActive, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>