force-app/main/default/objects/User/fields/Applicant_is_Existing_Customer__c.field-meta.xml
<CustomField>
    <fullName>Applicant_is_Existing_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applicant is Existing Customer</label>
    <type>Checkbox</type>
</CustomField>