force-app/main/default/objects/User/fields/Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>Branch_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>