force-app/main/default/objects/User/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Unit A</fullName>
            </value>
            <value>
                <fullName>Business Unit B</fullName>
            </value>
            <value>
                <fullName>Business Unit C</fullName>
            </value>
            <value>
                <fullName>Business Unit D</fullName>
            </value>
            <value>
                <fullName>Business Unit E</fullName>
            </value>
            <value>
                <fullName>Business Unit F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>