force-app/main/default/objects/User/fields/Certifications__c.field-meta.xml
<CustomField>
    <fullName>Certifications__c</fullName>
    <label>Certifications</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>