force-app/main/default/objects/User/fields/CO_Markets__c.field-meta.xml
<CustomField>
    <fullName>CO_Markets__c</fullName>
    <label>Colorado Markets</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Colorado</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>Weld</fullName>
            </value>
            <value>
                <fullName>Larimer</fullName>
            </value>
            <value>
                <fullName>CTS</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>