force-app/main/default/objects/User/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <defaultValue>&quot;000000&quot;</defaultValue>
    <description>This is the current cost center being billed for Salesforce licenses</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Center</label>
    <length>6</length>
    <type>Text</type>
</CustomField>