force-app/main/default/objects/User/fields/Date_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Date_Deactivated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Deactivated</label>
    <type>Date</type>
</CustomField>