force-app/main/default/objects/User/fields/Deactivated_Due_to_Non_Use__c.field-meta.xml
<CustomField>
    <fullName>Deactivated_Due_to_Non_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivated Due to Non Use</label>
    <type>Checkbox</type>
</CustomField>