force-app/main/default/objects/User/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>R&amp;D</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Employee Success</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
            <value>
                <fullName>Educational Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>