force-app/main/default/objects/User/fields/External_Federation_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Federation_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Federation ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>