force-app/main/default/objects/User/fields/I_am_Manager_2__c.field-meta.xml
<CustomField>
    <fullName>I_am_Manager_2__c</fullName>
    <formula>Manager.Manager.Id = $User.Id</formula>
    <label>I am Manager 2</label>
    <type>Checkbox</type>
</CustomField>