force-app/main/default/objects/User/fields/I_am_Manager_3__c.field-meta.xml
<CustomField>
    <fullName>I_am_Manager_3__c</fullName>
    <formula>Manager.Manager.Manager.Id = $User.Id</formula>
    <label>I am Manager 3</label>
    <type>Checkbox</type>
</CustomField>