force-app/main/default/objects/User/fields/I_am_Manager_4__c.field-meta.xml
<CustomField>
    <fullName>I_am_Manager_4__c</fullName>
    <formula>Manager.Manager.Manager.Manager.Id = $User.Id</formula>
    <label>I am Manager 4</label>
    <type>Checkbox</type>
</CustomField>