force-app/main/default/objects/User/fields/I_am_Manager__c.field-meta.xml
<CustomField>
    <fullName>I_am_Manager__c</fullName>
    <formula>ManagerId=$User.Id</formula>
    <label>I am Manager</label>
    <type>Checkbox</type>
</CustomField>