force-app/main/default/objects/User/fields/In_My_Manager_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>In_My_Manager_Hierarchy__c</fullName>
    <formula>OR(I_am_Manager__c,I_am_Manager_2__c,I_am_Manager_3__c,I_am_Manager_4__c,I_am_Manager_5__c,I_am_Manager_6__c)</formula>
    <label>In My Manager Hierarchy</label>
    <type>Checkbox</type>
</CustomField>