force-app/main/default/objects/User/fields/Is_Me__c.field-meta.xml
<CustomField>
    <fullName>Is_Me__c</fullName>
    <formula>Id=$User.Id</formula>
    <label>Is Me</label>
    <type>Checkbox</type>
</CustomField>