force-app/main/default/objects/User/fields/Manager_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_1_Name__c</fullName>
    <formula>Manager.FirstName&amp;&quot; &quot;&amp;Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager 1 Name</label>
    <type>Text</type>
</CustomField>