force-app/main/default/objects/User/fields/Manager_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_2_Name__c</fullName>
    <formula>Manager.Manager.FirstName&amp;&quot; &quot;&amp;Manager.Manager.LastName</formula>
    <label>Manager 2 Name</label>
    <type>Text</type>
</CustomField>