force-app/main/default/objects/User/fields/Managerial_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Managerial_Relationship__c</fullName>
    <formula>IF(Is_Me__c, &quot;Me&quot;, IF(I_am_Manager__c, &quot;My Subordinate (Direct)&quot;, IF(In_My_Manager_Hierarchy__c , &quot;My Subordinate (Indirect)&quot;, &quot;None&quot;)))</formula>
    <label>Managerial Relationship</label>
    <type>Text</type>
</CustomField>