force-app/main/default/objects/User/fields/Mortgage_Onboarding_Group__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Onboarding_Group__c</fullName>
    <label>Mortgage Onboarding Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Group 1</fullName>
            </value>
            <value>
                <fullName>Group 2</fullName>
            </value>
            <value>
                <fullName>Group 3</fullName>
            </value>
            <value>
                <fullName>Group 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>