force-app/main/default/objects/User/fields/NMLS_Number__c.field-meta.xml
<CustomField>
    <fullName>NMLS_Number__c</fullName>
    <description>Field for loan officers - stands for Nationwide Multistate Licensing System.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>NMLS Number</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>