force-app/main/default/objects/User/fields/Officer_Number__c.field-meta.xml
<CustomField>
    <fullName>Officer_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Officer Number</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>