force-app/main/default/objects/User/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>