force-app/main/default/objects/User/fields/Profile_and_Role_for_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Profile_and_Role_for_Reporting__c</fullName>
    <formula>User_Profile_for_Reporting__c &amp;&quot;, &quot;&amp; User_Role_for_Reporting__c</formula>
    <label>Profile and Role for Reporting</label>
    <type>Text</type>
</CustomField>