force-app/main/default/objects/User/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US-East</fullName>
            </value>
            <value>
                <fullName>US-Central</fullName>
            </value>
            <value>
                <fullName>US-West</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>AsiaPac</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>