force-app/main/default/objects/User/fields/Relationship_to_Me__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Me__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>Relationship to Me</label>
    <type>Text</type>
</CustomField>