force-app/main/default/objects/User/fields/SubProduct_Code__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SubProduct Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>