force-app/main/default/objects/User/fields/Test_Image_AWS__c.field-meta.xml
<CustomField>
    <fullName>Test_Image_AWS__c</fullName>
    <formula>IMAGE(  Test_Image_URL_on_AWS__c , &quot;Image2&quot; , 150, 150)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Image AWS</label>
    <type>Text</type>
</CustomField>