force-app/main/default/objects/User/fields/Test_Image_SF__c.field-meta.xml
<CustomField>
    <fullName>Test_Image_SF__c</fullName>
    <formula>IMAGE( Test_Image_URL_On_Salesforce__c , &quot;Image&quot; , 150, 150)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Image (SF)</label>
    <type>Text</type>
</CustomField>