force-app/main/default/objects/User/fields/Test_Image_URL_on_AWS__c.field-meta.xml
<CustomField>
    <fullName>Test_Image_URL_on_AWS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Test Image URL on AWS</label>
    <type>Url</type>
</CustomField>