force-app/main/default/objects/User/fields/Test_Image_URL_On_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Test_Image_URL_On_Salesforce__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Test Image URL (On Salesforce)</label>
    <type>Url</type>
</CustomField>