force-app/main/default/objects/User/fields/Trailhead_Points__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Points__c</fullName>
    <label>Trailhead Points</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>