force-app/main/default/objects/User/fields/Trailhead_Superbadges__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Superbadges__c</fullName>
    <label>Trailhead Superbadges</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>