force-app/main/default/objects/User/fields/User_in_My_Market__c.field-meta.xml
<CustomField>
    <fullName>User_in_My_Market__c</fullName>
    <formula>TEXT(User_s_Market__c) = TEXT($User.User_s_Market__c)</formula>
    <label>User in My Market</label>
    <type>Checkbox</type>
</CustomField>