force-app/main/default/objects/User/fields/User_in_My_Profile__c.field-meta.xml
<CustomField>
    <fullName>User_in_My_Profile__c</fullName>
    <formula>Profile.Id = $User.ProfileId</formula>
    <label>User in My Profile</label>
    <type>Checkbox</type>
</CustomField>