force-app/main/default/objects/User/fields/User_in_My_Role__c.field-meta.xml
<CustomField>
    <fullName>User_in_My_Role__c</fullName>
    <formula>UserRoleId = $UserRole.Id</formula>
    <label>User in My Role</label>
    <type>Checkbox</type>
</CustomField>