force-app/main/default/objects/User/fields/User_Profile__c.field-meta.xml
<CustomField>
    <fullName>User_Profile__c</fullName>
    <formula>HYPERLINK(&quot;https://fnni.lightning.force.com/lightning/r/User/&quot;&amp;Id&amp;&quot;/view&quot;, FirstName&amp;&quot; &quot;&amp;LastName)</formula>
    <label>User Profile Link</label>
    <type>Text</type>
</CustomField>