force-app/main/default/objects/User/fields/User_Profile_for_Reporting__c.field-meta.xml
<CustomField>
    <fullName>User_Profile_for_Reporting__c</fullName>
    <formula>Profile.Name</formula>
    <label>User Profile for Reporting</label>
    <type>Text</type>
</CustomField>