force-app/main/default/objects/User/fields/User_Role_for_Reporting__c.field-meta.xml
<CustomField>
    <fullName>User_Role_for_Reporting__c</fullName>
    <formula>UserRole.Name</formula>
    <label>User Role for Reporting</label>
    <type>Text</type>
</CustomField>