force-app/main/default/objects/User/fields/User_s_Market__c.field-meta.xml
<CustomField>
    <fullName>User_s_Market__c</fullName>
    <description>This field allows a user to specify which FN market they are a member of.</description>
    <label>User&#39;s Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Colorado</fullName>
            </value>
            <value>
                <fullName>Columbus</fullName>
            </value>
            <value>
                <fullName>Fremont</fullName>
            </value>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>Iowa</fullName>
            </value>
            <value>
                <fullName>Kansas</fullName>
            </value>
            <value>
                <fullName>Kearney</fullName>
            </value>
            <value>
                <fullName>Lincoln</fullName>
            </value>
            <value>
                <fullName>North Platte</fullName>
            </value>
            <value>
                <fullName>Omaha</fullName>
            </value>
            <value>
                <fullName>South Dakota</fullName>
            </value>
            <value>
                <fullName>Texas</fullName>
            </value>
            <value>
                <fullName>Washington County Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>