force-app/main/default/objects/User/fields/Users_Notes_Admin_Only__c.field-meta.xml
<CustomField>
    <fullName>Users_Notes_Admin_Only__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Users Notes (Admin Only)</label>
    <type>TextArea</type>
</CustomField>