force-app/main/default/objects/User/fields/Welcome_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Pilot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welcome Pilot</label>
    <type>Checkbox</type>
</CustomField>