force-app/main/default/objects/User/fields/X1st_PC_Name__c.field-meta.xml
<CustomField>
    <fullName>X1st_PC_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter your PC Name here. An example could be something like FNWML000ABC1234</inlineHelpText>
    <label>1st PC Name</label>
    <type>TextArea</type>
</CustomField>