force-app/main/default/objects/User/fields/X1st_PC_Type__c.field-meta.xml
<CustomField>
    <fullName>X1st_PC_Type__c</fullName>
    <inlineHelpText>Enter your PC Type here. If it is a VDI machine, please select “VDI.” If it is a complete physical computer, like a laptop or desktop, please select “Laptop/Desktop</inlineHelpText>
    <label>1st PC Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VDI</fullName>
            </value>
            <value>
                <fullName>Laptop/Desktop</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>