force-app/main/default/objects/User/fields/X2018_Brokerage_Services_Revenue_Actual__c.field-meta.xml
<CustomField>
    <fullName>X2018_Brokerage_Services_Revenue_Actual__c</fullName>
    <label>2019 Brokerage Services Revenue Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>