force-app/main/default/objects/User/fields/X2018_CTS_P_Card_Spend_Goal__c.field-meta.xml
<CustomField>
    <fullName>X2018_CTS_P_Card_Spend_Goal__c</fullName>
    <label>2019 CTS P-Card Spend Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>