force-app/main/default/objects/User/fields/X2018_IMPAX_Relationship_Review_Goal__c.field-meta.xml
<CustomField>
    <fullName>X2018_IMPAX_Relationship_Review_Goal__c</fullName>
    <label>2019 IMPAX Relationship Review Goal</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>