force-app/main/default/objects/User/fields/X2018_New_AUM_Goal__c.field-meta.xml
<CustomField>
    <fullName>X2018_New_AUM_Goal__c</fullName>
    <label>2019 New AUM Goal</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>