force-app/main/default/objects/User/fields/X2018_New_Client_Goal__c.field-meta.xml
<CustomField>
    <fullName>X2018_New_Client_Goal__c</fullName>
    <label>2019 New Relationship Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>