force-app/main/default/objects/User/fields/X2018_WMG_Annual_Revenue_Goal__c.field-meta.xml
<CustomField>
    <fullName>X2018_WMG_Annual_Revenue_Goal__c</fullName>
    <label>2019 WMG Annual Revenue Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>