force-app/main/default/objects/User/validationRules/Require_FNBO_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_FNBO_Email</fullName>
    <active>true</active>
    <description>Prevents domains other than @fnbo.com from being entered into a user record.</description>
    <errorConditionFormula>AND( 
NOT(Profile.Id = &quot;00e0c00000287hf&quot;), 
NOT(CONTAINS(Email, &quot;@fnbo&quot;)))</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Email addresses must use the @fnbo.com domain.</errorMessage>
</ValidationRule>